@@ -5,6 +5,8 @@ Blueprint CSS Framework Change Log
 
 Version 0.6 - TBD
 --
+  * Extracted the support for CSS buttons into a new plugin. [OFB]
+  * Added new plugin structure. [OFB]
   * Changed some default fonts so that BP works better with ClearType in XP [OFB]
   * Re-added the hack for clearing floats without extra markup. [OFB]
 	* Added Changelog.txt to track changes in each release. [GR]
